  and pkg-config to configure libpng.
- avoid complaining about include/lib directories we pull from 
  perl's config or we have built-in
- Makefile.PL now builds imconfig.h with #defines for libraries
  present (and for the GIF library version) rather than putting them
  into CFLAGS
- scanning for required include files is now down by directory rather
  than by file, using -e to check for the existence for a file rather than
  doing an eq against every filename in the directory.
- previously we only checked a candidate include directory for freetype.h
  to consider it a valid FT1.x include directory.  We now check if it
  contains fterrors.h too, if it does, then it's from a FT2 installation
  and we ignore it.
- Makefile.PL now accepts command-line options to set include and library
  directories and to enable/disable drivers.
- added simple examples to most of the filters documented in 
  Imager::Filters
- explicitly document there are no PNG specific tags.
- more examples in Imager::Draw
- minor cleanup of Imager::Fill
- eliminate unused variables and static functions
- simplify some XS code by adding another typemap entry
- the right-side bearing used to adjust the final width wasn't being
  calculated correctly, this would cause the bounding_box() function for 
  freetype 2.x to return a larger than expected text width.
  http://rt.cpan.org/NoAuth/Bug.html?id=11291
- add scaleX/scaleY to the method index and gives them some examples
  http://rt.cpan.org/NoAuth/Bug.html?id=11328
- call read() instead of open() in the example code in Imager.pm,
  and mention that open() is an alias for read().
  http://rt.cpan.org/NoAuth/Bug.html?id=11431
- added reference list of crop() parameters.
  http://rt.cpan.org/NoAuth/Bug.html?id=11430

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
